# CuteXMPP

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-client.yml
assets/: cutexmpp-logo.pdn
cmake/: CompilerWarnings.cmake
packaging/: CuteXMPP.desktop
resources/: resources.qrc
scripts/: build.py  common.py  configure.py  run.py
scripts/ci/: build_qxmpp.sh  package_linux.sh  package_macos.sh  package_windows.ps1
src/: main.cpp
src/logging/: app_logger.cpp  app_logger.h
src/models/: types.h
src/settings/: app_settings.cpp  app_settings.h  settings_store.cpp  settings_store.h
src/ui/: auth_dialog.cpp  auth_dialog.h  main_window.cpp  main_window.h  settings_dialog.cpp  settings_dialog.h  theme.cpp  theme.h  widgets.cpp  widgets.h
src/xmpp/: xmpp_service.cpp  xmpp_service.h
